# whisper-cpp-python

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  build.py  generate_py.py  pyproject.toml  setup.py  test.py  whisper_cpp_file_gen.py
.github/workflows/: build_and_publish.yml
tests/: test.py
whisper_cpp_python/: whisper.py  whisper_cpp.py  whisper_types.py
whisper_cpp_python/server/: __main__.py  app.py
